--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 		"test:ui": "vitest --ui --config ./vitest.config.ts"
 	},
 	"dependencies": {
+		"clsx": "^1.2.1",
 		"cross-env": "^7.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.11.1"
 	},
 	"devDependencies": {
+		"@feature-sliced/eslint-config": "^0.1.0-beta.6",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/react-hooks": "^8.0.1",
@@ -32,8 +34,8 @@
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-router-dom": "^5.3.3",
-		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.6",
+		"@typescript-eslint/parser": "^5.59.6",
 		"@vitejs/plugin-legacy": "^4.0.3",
 		"@vitejs/plugin-react": "^4.0.0",
 		"@vitest/ui": "^0.31.1",
@@ -41,6 +43,9 @@
 		"compression": "^1.7.4",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
+		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-boundaries": "^3.1.1",
+		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
