--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
 		"build": "vite build",
 		"lint": "yarn lint:ts && yarn lint:css",
 		"lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
-		"lint:css": "stylelint \"./src/**/*.scss\"",
-		"test": "vitest --config ./vitest.config.ts",
-		"test:ui": "vitest --ui --config ./vitest.config.ts"
+		"lint:css": "stylelint \"./src/**/*.scss\""
 	},
 	"dependencies": {
-		"clsx": "^1.2.1",
-		"cross-env": "^7.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^1.3.0",
@@ -51,6 +47,7 @@
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10",
+		"vite-bundle-visualizer": "^1.0.0",
 		"vite-plugin-checker": "^0.6.2",
 		"vite-plugin-pwa": "^0.17.4",
 		"workbox-window": "^6.5.4"
