--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
 		"lint:css": "stylelint \"./src/**/*.scss\""
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.0.1",
+		"axios": "^1.6.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^1.3.0",
+		"react-redux": "^9.0.4",
 		"react-router-dom": "^6.11.1"
 	},
 	"devDependencies": {
