--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.0.1",
 		"axios": "^1.6.3",
+		"js-cookie": "^3.0.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^1.3.0",
@@ -24,6 +25,7 @@
 		"react-router-dom": "^6.11.1"
 	},
 	"devDependencies": {
+		"@types/js-cookie": "^3.0.6",
 		"@types/react": "^18.2.46",
 		"@types/react-dom": "^18.2.18",
 		"@types/react-router-dom": "^5.3.3",
