fix eslint, add user initialization

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build": "vite build",
 		"lint": "yarn lint:ts && yarn lint:css",
 		"lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
-		"lint:css": "stylelint \"./src/**/*.scss\""
+		"lint:css": "npx stylelint \"./src/**/*.scss\""
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.0.1",
@@ -29,33 +29,33 @@
 		"@types/react": "^18.2.46",
 		"@types/react-dom": "^18.2.18",
 		"@types/react-router-dom": "^5.3.3",
-		"@typescript-eslint/eslint-plugin": "^5.59.6",
-		"@typescript-eslint/parser": "^5.59.6",
+		"@typescript-eslint/eslint-plugin": "^6.18.0",
+		"@typescript-eslint/parser": "^6.18.0",
 		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.38.0",
-		"eslint-config-prettier": "^8.8.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"eslint-plugin-blinovsku-plugin": "^0.0.2",
-		"eslint-plugin-boundaries": "^3.1.1",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-boundaries": "^4.0.1",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-prettier": "^5.1.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.3.4",
+		"eslint-plugin-react-refresh": "^0.4.5",
 		"husky": "^8.0.3",
-		"postcss": "^8.4.23",
-		"prettier": "^2.8.8",
-		"sass": "^1.62.1",
-		"stylelint": "^15.6.1",
-		"stylelint-config-standard": "^33.0.0",
-		"stylelint-config-standard-scss": "^9.0.0",
-		"stylelint-prettier": "^3.0.0",
-		"tailwindcss": "^3.3.2",
+		"postcss": "^8.4.33",
+		"prettier": "^3.1.1",
+		"sass": "^1.69.7",
+		"stylelint": "^16.1.0",
+		"stylelint-config-standard": "^36.0.0",
+		"stylelint-config-standard-scss": "^13.0.0",
+		"stylelint-prettier": "^5.0.0",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10",
+		"vite": "^5.0.11",
 		"vite-bundle-visualizer": "^1.0.0",
 		"vite-plugin-checker": "^0.6.2",
 		"vite-plugin-pwa": "^0.17.4",
-		"workbox-window": "^6.5.4"
+		"workbox-window": "^7.0.0"
 	}
 }
