--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -22,6 +22,7 @@
 		"no-empty-source": null,
 		"block-no-empty": null,
 		"color-function-notation": null,
-		"alpha-value-notation": null
+		"alpha-value-notation": null,
+		"scss/no-global-function-names": null
 	}
 }
