--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"build": "vite build",
 		"lint": "yarn lint:ts && yarn lint:css",
 		"lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
-		"lint:css": "npx stylelint \"./src/**/*.scss\""
+		"lint:css": "npx stylelint \"./src/**/*.scss\"",
+		"test": "vitest",
+		"test:screen": "vitest --ui"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.0.1",
@@ -25,6 +27,8 @@
 		"react-router-dom": "^6.11.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.2.0",
+		"@testing-library/react": "^14.1.2",
 		"@types/js-cookie": "^3.0.6",
 		"@types/react": "^18.2.46",
 		"@types/react-dom": "^18.2.18",
@@ -32,6 +36,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.18.0",
 		"@typescript-eslint/parser": "^6.18.0",
 		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/ui": "^1.2.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -43,6 +48,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"husky": "^8.0.3",
+		"jsdom": "^23.2.0",
 		"postcss": "^8.4.33",
 		"prettier": "^3.1.1",
 		"sass": "^1.69.7",
@@ -56,6 +62,7 @@
 		"vite-bundle-visualizer": "^1.0.0",
 		"vite-plugin-checker": "^0.6.2",
 		"vite-plugin-pwa": "^0.17.4",
+		"vitest": "^1.2.0",
 		"workbox-window": "^7.0.0"
 	}
 }
