--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"types": ["vitest/globals"]
 	},
 	"include": [
 		"./src/**/*.ts",
