--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
 		"test": "vitest",
 		"test:screen": "vitest --ui"
 	},
+	"lint-staged": {
+		"**/*.{ts,tsx}": [
+			"prettier -l",
+			"eslint"
+		]
+	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.0.1",
 		"axios": "^1.6.3",
@@ -49,6 +55,7 @@
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"husky": "^8.0.3",
 		"jsdom": "^23.2.0",
+		"lint-staged": "^15.2.0",
 		"postcss": "^8.4.33",
 		"prettier": "^3.1.1",
 		"sass": "^1.69.7",
