--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
 	"singleQuote": true,
 	"tabWidth": 2,
 	"useTabs": true,
-	"trailingComma": "es5"
+	"trailingComma": "es5",
+	"endOfLine": "auto"
 }
